2005-06-30  Petr Ovtchenkov  <ptr@island.plnet.ru>

	* xmt.cc: Use local define to detect Netware;
	don't use set_terminate, set_unexpected on Netware

	* mwccnlm.mak: makefile for MetroWerks CodeWarrior for
	Novell Netware.

2005-03-25  Petr Ovtchenkov  <ptr@island.plnet.ru>

	* Makefile: revision of Makefiles---path to stlport lib and
	-lstlport went to common Makefiles.

2004-11-05  Petr Ovtchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* library naming scheme changed.

2004-05-06  Petr Ovtchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* xmt.cc: fix wrong calculation of difference between two
	timespecs.
	
2004-04-08  Petr Ovtchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* fl.c, flck.h: add file locking wrapper.

	* lfstream.h: filestream with file locking

2004-01-08  Petr Ovtchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* xmt.cc: apply CloseHandle call for thread handler under Windows
	[thanks Anton Kholodkov].

2003-12-30  Petr Ovtchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* xmt.cc: user words should be freed before thread termination,
	not in dtor.

2003-12-29  Petr Ovtchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* xmt.cc: avoid signaling in Thread dtor.

2003-12-05  Petr Ovtchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* xmt.cc: don't use pthread_atfork in __at_fork_child, this settings
	already inherited; this shuld be checked for Solaris.

2003-09-25  Petr Ovtchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* xmt.cc, xmt.h: add Thread state flags, intended to show
	if underlined thread is still running without restrictions
	for detached threads; method 'good' show that underlined
	thread still running, 'bad'---not running or in bad state
	and 'is_join_req' show if 'join' applicable to this thread,
	even if thread terminated and became bad; add support
	for FreeBSD 5.1; remove STLport specific macros.


2003-09-15  Petr Ovtchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* xmt.cc: fix wrong behaviour for wait_* functions of Semaphore
	class on Windows platforms [thanks Anton Kholodkov].
