@@ -1,3 +1,8 @@
+2005-08-19  Petr Ovtchenkov  <Petr.Ovchenkov@Kaspersky.COM>
+
+	* xmt.h: created class LockerExt that work like Locker
+	[auto-unlock in destructor] but take native mutex object.
+
 2005-06-30  Petr Ovtchenkov  <ptr@island.plnet.ru>
 
 	* xmt.cc: Use local define to detect Netware;
